[package]
name = "signature-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-rt = "2.9.0"
actix-web = "4.4.0"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.5"
sha2="0.10.8"
rsa="0.9.3"
rand="0.8.5"
dotenv = "0.15"
anyhow = "1.0.75"
